css: add some magic from stackoverflow to stop weird iphone behaviour
On the iphone the h1 text looks tiny. This will apparently fix it.

--- a/assets/main.css
+++ b/assets/main.css
@@ -1,3 +1,4 @@
+html { -webkit-text-size-adjust: 100%; }
 body {
 	padding-left: 100px;
 	padding-top: 50px;
